# multi-cloud-mirror-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  env-sample  main.py  makefile  pyproject.toml
core/: auth.py  config.py  mirror.py  processor.py
examples/: .env.example  docker-compose.yml  example-list.txt  requirements.txt
registries/: acr.py  base.py  docr.py  ecr.py  gar.py  jfrog.py
scripts/: setup.py
tests/: test_mirror.py
utils/: logger.py  types.py
